--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,47 +1,106 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 body {
-    font-family: Montserrat, Poppins, 'Arial', sans-serif; /* Fonte sem serifa */
-    line-height: 1.6;
-    color: #333;
+  font-family: Montserrat, Poppins, "Arial", sans-serif; /* Fonte sem serifa */
+  line-height: 1.6;
+  color: #333;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-transform: uppercase;
+  font-family: Poppins, "Arial", sans-serif;
+  color: #663399; /* Roxo escuro para títulos */
+  margin-top: 1.5em;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 1em;
+
+  border-radius: 8px;
+
+  th,
+  td {
+    border: 1px solid #ddd;
+    padding: 6px 8px;
+    text-align: left;
   }
+
+  th {
+    background-color: #9966cc; /* Roxo claro para cabeçalho */
+    color: white;
+  }
+
   
 
-  h1, h2, h3, h4, h5, h6 {
-    text-transform: uppercase;
-    font-family: Poppins, 'Arial', sans-serif;
-    color: #663399; /* Roxo escuro para títulos */
-    margin-top: 1.5em;
+  tr:nth-child(even) {
+    background: hsl(270, 50%, 95%);
   }
-  
+  tr:nth-child(even) {
+    background: rgb(255, 255, 255);
+  }
+}
+
+.person-overview {
   table {
     width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 1em;
 
-
-    th, td {
-        border: 1px solid #ddd;
-        padding: 6px 8px;
-        text-align: left;
+    tr th:nth-child(1),
+    tr td:nth-child(1) {
+      width: 70%;
     }
-    
-    th {
-        background-color: #9966cc; /* Roxo claro para cabeçalho */
-        color: white;
+
+    tr th:nth-child(2),
+    tr td:nth-child(2) {
+      width: 20%;
+    }
+
+    tr th:nth-child(3),
+    tr td:nth-child(3) {
+      width: 10%;
     }
   }
-  
-  
-  /* Estilos específicos para a tabela de legenda */
-  #legenda ~table {
+}
+
+.report-overview {
+  table {
+    width: 50%;
+  }
+
+  &.cards-per-contract,
+  &.categories-per-contract {
+    table {
+      width: 45%;
+
+      tr th:nth-child(1),
+      tr td:nth-child(1) {
+        width: 70%;
+      }
+
+      tr th:nth-child(2),
+      tr td:nth-child(2) {
+        width: 30%;
+      }
+    }
+  }
+}
+
+.legenda {
+  table {
     font-size: 0.85em; /* Diminui o tamanho da fonte */
     font-weight: 500;
-
-    width: initial;
-
-    th, td {
-        padding: 2px 4px; /* Diminui o espaçamento interno */
-    }
-  }
   
+    width: initial;
+  
+    th,
+    td {
+      padding: 2px 4px; /* Diminui o espaçamento interno */
+    }
+  }  
+}
