--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,128 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+  body {
+    @apply w-full min-h-screen flex items-center justify-center bg-slate-400 print:bg-white;
+  }
+
+/* Customizações */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply uppercase font-[Poppins,sans-serif] text-purple-800;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+h1,
+h2 {
+  @apply mt-6 mb-3;
+}
+
+h3,
+h4 {
+  @apply my-4;
+}
+
+h1{@apply text-4xl font-black}
+h2{@apply text-3xl font-extrabold}
+h3{@apply text-2xl font-bold}
+h4{@apply text-xl font-semibold}
+h5{@apply text-lg font-medium}
+h6{@apply text-base font-medium}
+
+ul {
+  @apply mb-4
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  @apply font-[Montserrat,sans-serif];
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+table {
+  @apply w-full border-collapse mb-4 rounded-lg;
+}
+
+table th,
+table td {
+  @apply border border-gray-300 px-2 py-1 text-left;
+}
+
+table th {
+  @apply bg-purple-500 text-white;
+}
+
+table tr:nth-child(even) {
+  @apply bg-gray-100;
+}
+
+.person-overview table {
+  @apply w-full;
+}
+
+.person-overview table th:nth-child(1),
+.person-overview table td:nth-child(1) {
+  @apply w-7/12;
+}
+
+.person-overview table th:nth-child(2),
+.person-overview table td:nth-child(2) {
+  @apply w-5/12;
+}
+
+.report-overview table {
+  @apply w-7/12;
+}
+
+.report-overview.cards-per-contract table,
+.report-overview.categories-per-contract table {
+  @apply w-5/12;
+}
+
+.report-overview.cards-per-contract table th:nth-child(1),
+.report-overview.cards-per-contract table td:nth-child(1),
+.report-overview.categories-per-contract table th:nth-child(1),
+.report-overview.categories-per-contract table td:nth-child(1) {
+  @apply w-7/12;
+}
+
+.report-overview.cards-per-contract table th:nth-child(2),
+.report-overview.cards-per-contract table td:nth-child(2),
+.report-overview.categories-per-contract table th:nth-child(2),
+.report-overview.categories-per-contract table td:nth-child(2) {
+  @apply w-5/12;
+}
+
+.report-overview.per-category table {
+  @apply w-7/12;
+}
+
+.report-overview.per-category table th:nth-child(1),
+.report-overview.per-category table td:nth-child(1) {
+  @apply w-4/5;
+}
+
+.report-overview.per-category table th:nth-child(2),
+.report-overview.per-category table td:nth-child(2),
+.report-overview.per-category table th:nth-child(3),
+.report-overview.per-category table td:nth-child(3),
+.report-overview.per-category table th:nth-child(4),
+.report-overview.per-category table td:nth-child(4),
+.report-overview.per-category table th:nth-child(5),
+.report-overview.per-category table td:nth-child(5) {
+  @apply w-[10%];
+}
+
+.legenda table {
+  @apply text-xs font-medium;
+}
+
+.legenda table th,
+.legenda table td {
+  @apply p-1;
 }
